--- a/services/managing-services.html.md.erb
+++ b/services/managing-services.html.md.erb
@@ -18,9 +18,9 @@ $ cf marketplace
 Getting services from marketplace in org my-org / space test as user@example.com...
 OK
 
-service               plans                  description
-p-mysql               100mb, 1gb             A DBaaS
-p-riakcs              developer              An S3-compatible object store
+service            plans               description                       broker
+p-mysql            100mb, 1gb          A DBaaS                           mysql-broker
+p-riakcs           developer           An S3-compatible object store     object-store-broker
 </pre>
 
 ## <a id='create'></a>Creating Service Instances ##
@@ -41,6 +41,8 @@ OK
 </pre>
 
 <strong>User Provided Service Instances</strong> provide a way for developers to bind apps with services that are not available in their Cloud Foundry marketplace. For more information, see the <a href="./user-provided.html">User Provided Service Instances</a> topic.
+
+<p class="note"><strong>Note</strong>: When there are two or more services with the same name, provided by multiple brokers, you must specify the broker using <code>-b BROKER</code> flag to the <code>cf create-service</code> command.</p>
 
 ### <a id='arbitrary-params-create'></a> Arbitrary Parameters  ###
 
